--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,8 +5,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+.vscode
 
 node_modules
+package-lock.json
+package.json
+tsconfig.json
+tsconfig.node.json
 dist
 dist-ssr
 *.local
