--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,15 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.vscode
-
-node_modules
-package-lock.json
-package.json
-tsconfig.json
+vite.config.ts
 tsconfig.node.json
+tsconfig.json
+package.json
+package-lock.json
+node_modules
 dist
 dist-ssr
 *.local
-
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
